Ensure procedure order buttons are visible

--- a/interface/themes/style_metal.css
+++ b/interface/themes/style_metal.css
@@ -1340,3 +1340,11 @@ table.dataTable#therapy_groups_list tbody td{
     margin: 20px 20px 2px 20px;
 
 }
+
+.btn-default {
+    color: #444444 !important;
+}
+
+.btn-link {
+    color: #444444 !important;
+}
